--- a/manual/manual-en/manual-en.tex
+++ b/manual/manual-en/manual-en.tex
@@ -93,6 +93,7 @@ supported by the NSF grants CHE 1152357 and CHE 1464906. Guidance from the late 
 \item Analyze point group of geometry and irreducible representations (\emph{irreps.}) of normal modes in full symmetry (for \emph{irreps.}: closed-shell molecule only). \\
     Symmetry analysis is based on the symmetry subroutines from \textsc{Mopac} 7.1, which is fully in the public domain (at \href{http://openmopac.net/Downloads/Downloads.html}{openmopac.net} and \href{https://sourceforge.net/projects/mopac7/}{sourceforge.net}).
 \item Thermochemistry calculation uses the point group in full symmetry, and the results are printed in Gaussian-style (for detailed explanations, see Foresman and Frisch, \emph{Exploring Chemistry With Electronic Structure Methods}, Ed.2, Gaussian Inc., Pittsburgh, PA, \textbf{1996}, p.66).
+\item Generalized subsystem vibrational analysis (GSVA) to calculate intrinsic fragmental vibrations (see \textit{J. Chem. Theory Comput.} 14(5), 2558-2569, 2018).
 \item Save a \textsc{Molden} file for animation of normal modes.
 \item Set up isotopic masses, temperature, pressure, scale factor and/or experimental frequencies, and so on.
 \item Can be used as a third party module for frequency and thermochemistry calculations in a quantum chemistry program, especially when non-Abelian group is not supported therein.
@@ -259,6 +260,15 @@ replaced by the values provided after the \verb|$IsoMas| group (section \ref{sec
 \verb|IFExp|: (\verb|.True.|/\verb|.False.|) Correct the Hessian matrix using
 experimental vibrational frequencies which are provided after the \verb|$ExpFrq| group (section \ref{sec:inp-expfrq}).
 Default: \verb|.False.|
+
+
+\bigskip{}\bigskip{}
+\index{{\texttt{\$Contrl} group}@{\texttt{\$Contrl} group}!\texttt{IFGSVA}}
+%\index{{\texttt{\$ExpFrq} group}@{\texttt{\$ExpFrq} group}}
+%\index{{Experimental frequency correction}@{Experimental frequency correction}}
+\verb|IFGSVA|: (\verb|.True.|/\verb|.False.|)   Carry out generalized subsystem vibrational analysis (GSVA) for a fragment within the whole molecular system. The atom labels specifying the subsystem are provided after the  \verb|$GSVA| group (section \ref{sec:inp-gsva}).
+Default: \verb|.False.|
+
 
 \subsubsection{Keywords to save data} \label{subsec:inp-qcdata-save}
 \index{{\texttt{\$Contrl} group}@{\texttt{\$Contrl} group}!{Keywords to save data}}
@@ -507,6 +517,23 @@ For example,
 \end{Verbatim}
 
 
+
+\subsection{\texttt{\$GSVA} group} \label{sec:inp-gsva}
+%\index{{\texttt{\$Thermo} group}@{\texttt{\$Thermo} group}}
+%\index{{Thermochemistry}@{Thermochemistry}}
+
+This group defines the subsystem via the keyword \verb|subsystem| by specifying the atom labels.
+For example,
+\begin{Verbatim}[frame=single]
+ $GSVA
+ subsystem="4,5,1-3"
+ $End 
+\end{Verbatim}
+
+The atom labels need to be enclosed by quotation marks as a string without space. The comma is used as delimiter. Two ways of selecting atoms are supported: (1) provide a single number and (2) provide a range with hyphen (-). At least two atoms are needed to define a subsystem.
+
+
+
 \subsection{\texttt{\$Thermo} group} \label{sec:inp-thermo}
 \index{{\texttt{\$Thermo} group}@{\texttt{\$Thermo} group}}
 \index{{Thermochemistry}@{Thermochemistry}}
@@ -703,6 +730,30 @@ genuine experimental frequencies:   1402  2727  3707 cm-1
  $IsoMas $End
  2  2.01410
 \end{Verbatim}
+
+\clearpage
+\subsection{Calculation of the intrinsic fragmental vibrations of CH$_4$ inside C$_{60}$ with generalized subsystem vibrational analysis (GSVA) } \label{sec:gsva-example}
+%\index{{Example}@{Example}!{``Experimental'' frequencies of HDO}}
+%\index{{UniMoVib format}@{UniMoVib format}}
+
+\begin{Verbatim}[frame=single,label=example,labelposition=topline,numbers=left,rulecolor=\color{green},fontsize=\footnotesize,baselinestretch=1.0]
+The CH4 molecule is defined by atoms 1-5 in this CH4@C60 complex.
+
+ $contrl
+   qcprog="gaussian"
+   ifgsva=.true.
+ $end
+
+ $gsva
+   subsystem="3,4,5,1-2" 
+ $end
+
+ $qcdata
+   fchk="ch4-c60.fchk"
+ $end
+\end{Verbatim}
+
+
 
 
 \pagebreak{}
